@@ -107,8 +107,7 @@ KVIMODULEEXPORTFUNC void setup_finish()
 		if(!szMircServers.isEmpty())
 		{
 			g_pIrcServerDataBase->loadFromMircIni(szMircServers,szMircIni,
-				KVI_OPTION_STRINGLIST(KviOption_stringlistRecentIrcUrls));
-			g_pApp->emitRecentUrlsChanged();
+				KVI_OPTION_STRINGLIST(KviOption_stringlistRecentServers));
 			g_pApp->saveIrcServerDataBase();
 		}
 
