@@ -1,6 +1,7 @@
 12 Mar 2007
    [Alexey]
    - Added support for remote dns on socks5 proxy
+   - Added option to configure identd output mode
 
 06 Mar 2007
    [Pragma]
